tests/snapshots/scanner_tests__arrays__array_with_multiple_items.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Dash,
    Identifier(
        "first",
    ),
    Newline,
    Dash,
    Identifier(
        "second",
    ),
    Newline,
    Dash,
    Identifier(
        "third",
    ),
    Eof,
]
