tests/snapshots/scanner_tests__arrays__dash_prefix.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Dash,
    Identifier(
        "item",
    ),
    Eof,
]
